--- a/asset login/css/loginkw.css
+++ b/asset login/css/loginkw.css
@@ -13,7 +13,7 @@ body {
 
 .login-container {
     max-width: 410px;
-    background: #ffffffba;
+    background: #ffffff;
     margin: 0 auto;
     padding: 0px 20px;
     border-radius: 10px;
@@ -72,7 +72,7 @@ body {
 .login-container .separator span {
     position: relative;
     z-index: 1;
-    background: #ffffff00;
+    background: #ffffff;
     padding: 0 0.9rem;
     font-size: 13px;
     font-weight: 500;
@@ -85,7 +85,7 @@ body {
     top: 50%;
     width: 100%;
     height: 1px;
-    background: #fff;
+    background: #000;
 }
 
 .login-form .input-wrapper {
